--- a/.github/workflows/test-all-warehouses.yml
+++ b/.github/workflows/test-all-warehouses.yml
@@ -35,6 +35,7 @@ jobs:
             databricks,
             databricks_catalog,
             spark,
+            duckdb,
           ]
     uses: ./.github/workflows/test-warehouse.yml
     with:
